--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hari-ChatBot</title>
   </head>
-  <body background="./public/ai-generated-8747658_1920.jpg" class="bg-cover bg-center"  
+  <body background="/ai-generated-8747658_1920.jpg" class="bg-cover bg-center"  
         style="background-size: cover; background-position: center;">
     <div id="root">
 
